[gd_scene load_steps=2 format=3 uid="uid://cv213gl7od54h"]

[ext_resource type="Script" path="res://scenes/pipe_spawner/pipe_spawner.gd" id="1_d1iva"]

[node name="PipeSpawner" type="Node2D"]
script = ExtResource("1_d1iva")

[node name="TopSpawner" type="Marker2D" parent="."]
position = Vector2(400, 0)

[node name="BottomSpawner" type="Marker2D" parent="."]
position = Vector2(400, 400)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
